--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Owen Krueger
 description: Software Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/profile.jpg
+avatar: https://blog.owenkrueger.dev/images/profile.jpeg
 
 #
 # Flags below are optional
